--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,10 @@ body {
   font-size: 8pt;
   float: right;
 }
+.header {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+img {
+  height: 100%;
+}
