--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,19 +1,6 @@
-<!--
-<mat-sidenav-container >
-  <mat-sidenav #sidenav mode="side" [(opened)]="opened" (opened)="events.push('open!')"
-               (closed)="events.push('close!')">
-
-  </mat-sidenav>
-
-  <mat-sidenav-content>
-    <p><button mat-button (click)="sidenav.toggle()">sidenav.toggle()</button></p>
-    <app-top-headlines></app-top-headlines>
-  </mat-sidenav-content>
-</mat-sidenav-container>
--->
 <div class="example-container" [class.example-is-mobile]="mobileQuery.matches" >
   <mat-toolbar color="primary" class="example-toolbar">
-    <button mat-icon-button (click)="snav.toggle()"><mat-icon></mat-icon></button>
+    <button  (click)="snav.toggle()"><i class="fas fa-bars"></i></button>
     <h1 class="example-app-name">NEWS FEED</h1>
   </mat-toolbar>
 
@@ -22,21 +9,17 @@
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                  [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
       <mat-nav-list>
-        <a mat-list-item routerLink="" >Top Headlines</a>
-        <a mat-list-item routerLink="." >United Kingdom</a>
-        <a mat-list-item routerLink="/technology" >Technology</a>
-        <a mat-list-item routerLink="/health" >Health</a>
-        <a mat-list-item routerLink="." >Sports</a>
-        <a mat-list-item routerLink="." >Science</a>
+        <a mat-list-item routerLink="/top-headlines" (click)="snav.close()">Top Headlines</a>
+        <a mat-list-item routerLink="/united-kingdom" (click)="snav.close()">United Kingdom</a>
+        <a mat-list-item routerLink="/technology" (click)="snav.close()">Technology</a>
+        <a mat-list-item routerLink="/health" (click)="snav.close()">Health</a>
+        <a mat-list-item routerLink="/sports" (click)="snav.close()">Sports</a>
+        <a mat-list-item routerLink="science" (click)="snav.close()">Science</a>
       </mat-nav-list>
     </mat-sidenav>
-
     <mat-sidenav-content>
+      <div *ngIf="showLoadingIndicator" class="spinner">LOADING</div>
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
-
-<!-- Copyright 2019 Google Inc. All Rights Reserved.
-    Use of this source code is governed by an MIT-style license that
-    can be found in the LICENSE file at http://angular.io/license -->
