--- a/src/app/top-headlines/top-headlines.component.html
+++ b/src/app/top-headlines/top-headlines.component.html
@@ -13,23 +13,23 @@
 </div>-->
 
 <div *ngFor="let category of categories">
-  <div class="container" >
-<h5>{{category}}</h5>
-<div class="container" *ngFor="let n of news">
-<div class="card mb-5" style="max-width: 800px;">
-  <div class="row no-gutters">
-    <div class="col-md-4">
-      <img src="{{n.urlToImage}}" class="card-img" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">{{n.title}}</h5>
-        <p class="card-text"><small class="text-muted">Source: {{n.source.name}}, {{n.publishedAt |  date:'medium'}}</small></p>
-        <a href="{{n.url}}">Read full coverage</a>
+  <div class="container header" >
+  <h5>{{category | uppercase}}</h5>
+  <div class="container" *ngFor="let n of news">
+    <div class="card mb-5" style="max-width: 800px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <img src="{{n.urlToImage}}" class="card-img" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">{{n.title}}</h5>
+            <p class="card-text"><small class="text-muted">Source: {{n.source.name}}, {{n.publishedAt |  date:'medium'}}</small></p>
+            <a href="{{n.url}}">Read full coverage</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
-</div>
-</div>
+  </div>
 </div>
