--- a/src/app/top-headlines/top-headlines.component.html
+++ b/src/app/top-headlines/top-headlines.component.html
@@ -10,14 +10,13 @@
           <div class="card-body">
             <h5 class="card-title">{{n.title }}</h5>
             <p class="card-text"><small class="text-muted">Source: {{n.source.name }}, {{n.publishedAt |  date:'medium'}}</small></p>
-            <a href="{{n.url}}">Read full coverage</a>
+            <a href="{{n.url}}" target="_blank">Read full coverage</a>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
 
 <div class="container header">
   <h5>Technology</h5>
@@ -31,7 +30,7 @@
           <div class="card-body">
             <h5 class="card-title">{{n.title }}</h5>
             <p class="card-text"><small class="text-muted">Source: {{n.source.name }}, {{n.publishedAt |  date:'medium'}}</small></p>
-            <a href="{{n.url}}">Read full coverage</a>
+            <a href="{{n.url}}" target="_blank">Read full coverage</a>
           </div>
         </div>
       </div>
@@ -51,7 +50,7 @@
           <div class="card-body">
             <h5 class="card-title">{{n.title }}</h5>
             <p class="card-text"><small class="text-muted">Source: {{n.source.name }}, {{n.publishedAt |  date:'medium'}}</small></p>
-            <a href="{{n.url}}">Read full coverage</a>
+            <a href="{{n.url}}" target="_blank">Read full coverage</a>
           </div>
         </div>
       </div>
@@ -71,7 +70,7 @@
           <div class="card-body">
             <h5 class="card-title">{{n.title }}</h5>
             <p class="card-text"><small class="text-muted">Source: {{n.source.name }}, {{n.publishedAt |  date:'medium'}}</small></p>
-            <a href="{{n.url}}">Read full coverage</a>
+            <a href="{{n.url}}" target="_blank">Read full coverage</a>
           </div>
         </div>
       </div>
@@ -91,7 +90,7 @@
           <div class="card-body">
             <h5 class="card-title">{{n.title }}</h5>
             <p class="card-text"><small class="text-muted">Source: {{n.source.name }}, {{n.publishedAt |  date:'medium'}}</small></p>
-            <a href="{{n.url}}">Read full coverage</a>
+            <a href="{{n.url}}" target="_blank">Read full coverage</a>
           </div>
         </div>
       </div>
