--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -4,8 +4,8 @@
     <h1 class="example-app-name">NEWS FEED</h1>
 
     <div class="search-box">
-      <input id="searchInput" type="text" [formControl]="news" placeholder="Search for topics..">
-      <button routerLink="/search" (click)="submitSearch(news.value)" type="submit"><i id="fas-search" class="fas fa-search"></i></button>
+      <input id="searchInput" type="text" (keyup.enter)="submitSearch(news.value)" [formControl]="news" placeholder="Search for topics..">
+      <button routerLink="/search"  (click)="submitSearch(news.value)" type="submit"><i id="fas-search" class="fas fa-search"></i></button>
     </div>
   </mat-toolbar>
 
