--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,9 +1,9 @@
 <div class="example-container" [class.example-is-mobile]="mobileQuery.matches" >
   <mat-toolbar color="primary" class="example-toolbar">
     <button  (click)="snav.toggle()"><i class="fas fa-bars"></i></button>
-    <h1 class="example-app-name">NEWS FEED</h1>
+    <h1 class="example-app-name d-none d-md-block">NEWS FEED</h1>
 
-    <div class="search-box">
+    <div class="search-box justify-content-md-end">
       <input id="searchInput" type="text" (keyup.enter)="submitSearch(news.value)" [formControl]="news" placeholder="Search for topics..">
       <button  (click)="submitSearch(news.value)" type="submit"><i id="fas-search" class="fas fa-search"></i></button>
     </div>
